--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">whatshot</i></h2>
             <h5 class="center">Promoción 1</h5>
             <p class="light"></p>
           </div>
@@ -59,7 +59,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">watch</i></h2>
             <h5 class="center">Promoción 2</h5>
 
             <p class="light"></p>
@@ -68,7 +68,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">opacity</i></h2>
             <h5 class="center">Promoción 3</h5>
 
             <p class="light"></p>
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contactos</h4>
+          <h4>Más Info</h4>
           <p class="left-align light"></p>
         </div>
       </div>
@@ -121,13 +121,13 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Información sobre el emprendimiento</h5>
+          <h5 class="white-text">Información sobre la medicina estetica</h5>
           <p class="grey-text text-lighten-4"></p>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Configuraciones</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
@@ -136,19 +136,19 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Contactos</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">ejemplo@</a></li>
+            <li><a class="white-text" href="#!">Instagram</a></li>
+            <li><a class="white-text" href="#!">Facebook</a></li>
+            <li><a class="white-text" href="#!">Tel</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      <a class="brown-text text-lighten-3" href="http://materializecss.com">CopyRight y datos personales   </a>
       </div>
     </div>
   </footer>
